--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "borgoose": "^1.0.7",
     "chalk": "^4.1.2",
     "lodash": "^4.17.21",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.21.0"
+    "whatsapp-web.js": "^1.21.0",
+    "uuid": "^9.0.0",
+    "moment": "^2.29.4",
+    "event-stream": "^4.0.1"
   }
 }
